--- a/src/components/layout/Layout.css
+++ b/src/components/layout/Layout.css
@@ -7,11 +7,15 @@
 .topbar {
   background-color: #020202;
   color: white;
-  padding: 1rem 2rem;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   display: flex;
   align-items: center;
   gap: 1rem;
+}
+
+.topbar-collapse-icon {
+  height: 24px;
+  width: 44px;
 }
 
 .sidebar-toggle-btn {
